examples/datalog/14_aggregations/76_min_simple.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_min
Knowledge graph 'test_min' created.
Switched to knowledge graph: test_min
> .kg use test_min
Switched to knowledge graph: test_min
> +scores[(85,), (92,), (78,), (95,), (88,)].
Inserted 5 fact(s) into 'scores'.
> +min_score(<MIN:S>) :- scores(S).
Script error: Parse error: Invalid term: '<MIN:S>'
